--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -33,6 +34,6 @@ yarn-error.log*
 # vercel
 .vercel
 
-#mongo volume
-/mongo-volume/*
-!/mongo-volume/.gitkeep
+#db volume
+/db/vol/*
+!/db/vol/.gitkeep
