--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.2",
+    "express-mysql-session": "^2.1.8",
     "express-session": "^1.17.3",
-    "mongoose": "^6.3.3",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.3.3",
     "next": "^12.1.0",
     "next-connect": "^0.13.0",
     "react": "17.0.2",
